# yokel

./: .gitignore  README.md  requirements.txt
.github/workflows/: ci.yml
adr/: ADR-001-poetry-monorepo.md  ADR-002-fluent-immutable-builder.md  ADR-003-plugin-based-provider-resolver.md  ADR-004-unified-response-model.md  ADR-005-mutable-conversation-object.md  ADR-006-error-hierarchy.md  ADR-007-explicit-configuration-no-global-state.md  ADR-008-focused-scope-provider-abstraction-only.md  ADR-009-code-quality-tooling.md  ADR-010-python-coding-and-testing-conventions.md  ADR-011-yokel-singleton-and-default-provider-registry.md  ADR-012-provider-namespace-packaging.md  ADR-013-tool-handler-interface-and-core-loop-executor.md
src/: pyproject.toml
src/tests/: events_test.py
src/tests/configuration/: configuration_manager_test.py  configuration_section_test.py  plugin_configuration_section_test.py
src/yokel-anthropic/: pyproject.toml
src/yokel-anthropic/tests/: conftest.py  init_test.py  integration_test.py  provider_test.py
src/yokel-anthropic/yokel/anthropic/: __init__.py  _provider.py
src/yokel-core/: pyproject.toml
src/yokel-core/tests/: builder_test.py  conftest.py  conversation_test.py  errors_test.py  events_test.py  models_test.py  registry_test.py  yokel_test.py
src/yokel-core/tests/configuration/: configuration_manager_test.py  configuration_section_test.py  plugin_configuration_section_test.py
src/yokel-core/yokel/: __init__.py  _builder.py  _conversation.py  _registry.py  _yokel.py  api.py  providers.py  tool_handlers.py
src/yokel-core/yokel/core/: __init__.py  errors.py  events.py  models.py
src/yokel-core/yokel/core/configuration/: interfaces.py  manager.py
src/yokel/configuration/: interfaces.py
