[tool.poetry]
name = "yokel"
version = "0.1.0"
description = "A non-published project that contains the datacore v2 projects"
authors = ["Rusty Swayne"]
readme = "README.md"
package-mode = false
requires-poetry = "^2.4"

[tool.poetry.requires-plugins]
poetry-monoranger-plugin = "^1.8.1"

[tool.poetry.dependencies]
python = "^3.12"

# Subprojects - always installed
[tool.poetry.group.projects.dependencies]
yokel-core = { path = "yokel-core", develop = true }

[tool.poetry.group.projects]
optional = false


[tool.black]
target-version = ["py311"]
line-length = 88
preview = true