[tool.poetry]
name = "yokel"
version = "0.1.0"
description = "A non-published project that contains the datacore v2 projects"
authors = ["Rusty Swayne"]
readme = "README.md"
package-mode = false
requires-poetry = "^2.4"

[tool.poetry.requires-plugins]
poetry-monoranger-plugin = "^0.4.0"

[tool.poetry.dependencies]
python = "^3.12"

# Subprojects - always installed
[tool.poetry.group.projects.dependencies]
yokel-core = { path = "yokel-core", develop = true }
yokel-anthropic = { path = "yokel-anthropic", develop = true }

[tool.poetry.group.projects]
optional = false

[tool.poetry.group.dev.dependencies]
black = ">=25.0"
pytest = ">=9.1.0,<10.0.0"


[tool.black]
target-version = ["py311"]
line-length = 88
preview = true

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
markers = ["requires_api_key: live test that calls the real Anthropic API"]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
mypy_path = ["yokel-core", "yokel-anthropic"]
# Per-package tests/ dirs have no __init__.py (ADR-010), so each conftest.py
# resolves to the same "tests.conftest" module name and collides once more
# than one package ships tests. conftest.py is fixture wiring, not part of
# the typed public surface, so exclude it rather than add __init__.py.
exclude = '(^|/)conftest\.py$'