[project]
name = "yokel-core"
version = "0.1.0"
description = ""
authors = [
    {name = "Rusty Swayne", email = "you@example.com"}
]
packages = [
   { include = "yokel" }
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)"
]
docs = [
    "mkdocs (>=1.6.0,<2.0.0)",
    "mkdocs-material (>=9.5.0,<10.0.0)",
    "mkdocstrings[python] (>=0.25.0,<1.0.0)"
]
