[tool.poetry]
name = "yokel-core"
version = "0.1.0"
description = ""
authors = ["Rusty Swayne <you@example.com>"]
# yokel/ has no __init__.py (PEP 420 namespace package, ADR-012) so other
# distributions (e.g. yokel-anthropic) can contribute yokel/<provider> subpackages.
packages = [{ include = "yokel" }]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = ">=6.0.3,<7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.1.0,<10.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6.0,<2.0.0"
mkdocs-material = ">=9.5.0,<10.0.0"
mkdocstrings = {extras = ["python"], version = ">=0.25.0,<1.0.0"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
